Add build action.