@@ -10,6 +10,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>11</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<!-- 3rd party dependencies -->
 		<spring-boot.version>2.7.10</spring-boot.version>
 		<junit-jupiter.version>5.9.3</junit-jupiter.version>
@@ -101,6 +103,10 @@
 					<configuration>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
+						<compilerArgs>
+							<arg>--add-exports=java.base/java.lang=ALL-UNNAMED</arg>
+							<arg>--add-exports=jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
+						</compilerArgs>
 					</configuration>
 				</plugin>
 			</plugins>
